DOM manipulation to handle mobile scroll-behind-panel issue

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -62,7 +62,7 @@ button.dt-review {
   }
   input {
     border-radius: 3px;
-    padding: 3px;
+    padding: 3px 5px;
     border: 1px solid #999;
   }
   .filter {
@@ -116,13 +116,24 @@ input[type=checkbox]:focus, input[type=text]:focus, button:focus {
   height: 100%;
   width: 80%;
   padding: 50px;
-  background: rgba(0,0,0,0.8);
+  background: rgba(0,0,0,0.9);
   color: white;
   transform: scaleX(0.00001);
   transform-origin: 100% 50%;
   transition: transform 0.2s ease-in-out;
-  li {
-    font-weight: bold;
+  .tempo {
+    li {
+      margin-bottom: 30px;
+    }
+    h5 {
+      font: bold 20px 'Montserrat', 'Helvetica Neue', sans-serif;
+      border-bottom: 1px dotted rgba(255,255,255,0.5);
+      margin-bottom: 10px;
+      padding-bottom: 10px;
+    }
+  }
+  .songs li {
+    font-weight: normal;
     margin-bottom: 10px;
     &:before {
       content: '- '
@@ -142,6 +153,45 @@ input[type=checkbox]:focus, input[type=text]:focus, button:focus {
   font-size: 25px;
   color: white;
   cursor: pointer;
+}
+
+.selected-songs .selector-holder:first-of-type {
+  padding-right: 4%;
+  width: 58%;
+}
+
+.selector-holder {
+  width: 38%;
+  display: inline-block;
+  vertical-align: top;
+  h4 {
+    text-transform: uppercase;
+    font: bold 30px 'Montserrat', 'Helvetica Neue', sans-serif;
+    margin-bottom: 20px;
+  }
+  input {
+    width: 100%;
+    border-radius: 5px;
+    padding: 5px 10px;
+    border: 1px solid #999;
+    margin-bottom: 20px;
+    color: black;
+  }
+  button {
+    color: black;
+    background: white;
+    float: right;
+    padding: 10px;
+    border: none; 
+    border-radius: 5px;
+    font: bold 20px 'Montserrat', 'Helvetica Neue', sans-serif;
+    border: 1px solid rgba(255,255,255,0.4);
+    transition: background 0.1s ease-in-out;
+    &.disabled {
+      background: #444;
+      transition: background 0.1s ease-in-out;
+    }
+  }
 }
 
 //Custom Checkbox Font Icon Replacement
@@ -210,7 +260,7 @@ input[type=checkbox] {
     position: fixed;
     top: 0;
     left: 0;
-    background: rgba(0,0,0,0.8);
+    background: rgba(0,0,0,0.9);
     width: 100%;
     height: 100%;
     padding: 20px;
@@ -239,12 +289,33 @@ input[type=checkbox] {
     width: 16%;
   }
   .selected-songs {
+    position: fixed;
     padding: 20px;
     width: 100%;
   }
   .closer {
     right: 10px;
     top: 10px;
+  }
+  .selected-holder {
+    padding: 0;
+    width: 100%;
+    position: relative;
+    overflow: scroll;
+    max-height: 100%;
+  }
+  .selected-songs .selector-holder:first-of-type {
+    padding: 0;
+    width: 100%;
+    h4 {
+      font-size: 25px;
+    }
+    .tempo h5 {
+      font-size: 15px;
+    }
+    .songs li {
+      font-size: 14px;
+    }
   }
 }
 
@@ -263,6 +334,22 @@ input[type=checkbox] {
 
 .bold {
   font-weight: bold;
+}
+
+.normal {
+  font-weight: normal;
+}
+
+.lowercase {
+  text-transform: lowercase;
+}
+
+.disabled {
+  color: rgba(255,255,255,0.2);
+}
+
+input:focus, button:focus {
+  outline: none;
 }
 
 
